--- a/other-configurations/windows-journal-simple.yaml
+++ b/other-configurations/windows-journal-simple.yaml
@@ -6,7 +6,7 @@ positions:
   filename: ./positions.yaml
  
 clients:
-  - url: http://0.0.0.0:3100/loki/api/v1/push
+  - url: http://---IP---:3100/loki/api/v1/push
  
 scrape_configs:
   - job_name: windows-application
